--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
-  name: spring-boot-k8s-deployment
+  name: spring-boot-k8s-deployments
 spec:
   selector:
     matchLabels:
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: springboot-k8ssvc
+  name: springboot-k8ssvcs
 spec:
   selector:
     app: spring-boot-k8s
