--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -25,10 +25,10 @@ spec:
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: springboot-k8ssvcs
+  name: springboot-k8ssvc
 spec:
   selector:
-    app: spring-boot-k8
+    app: spring-boot-k8s
   ports:
     - protocol: "TCP"
       port: 80 # The port that the service is running on in the cluster
